--- a/Example/IIDadata/Base.lproj/Main.storyboard
+++ b/Example/IIDadata/Base.lproj/Main.storyboard
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Wdc-zx-oZN">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--IIDadata Example-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="IIDadata_Example" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,11 +18,114 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Hmr-2v-uLv">
+                                <rect key="frame" x="16" y="94" width="343" height="30"/>
+                                <state key="normal" title="Use API key"/>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Dadata API key" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CXv-Hu-1Tq">
+                                <rect key="frame" x="16" y="52" width="343" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Hmr-2v-uLv" secondAttribute="trailing" constant="16" id="IAH-tu-jyo"/>
+                            <constraint firstItem="CXv-Hu-1Tq" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="KmZ-bO-aET"/>
+                            <constraint firstAttribute="trailing" secondItem="CXv-Hu-1Tq" secondAttribute="trailing" constant="16" id="bfc-cX-OdN"/>
+                            <constraint firstItem="Hmr-2v-uLv" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="kxy-ul-dPx"/>
+                            <constraint firstItem="CXv-Hu-1Tq" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="uRN-cO-0xa"/>
+                            <constraint firstItem="Hmr-2v-uLv" firstAttribute="top" secondItem="CXv-Hu-1Tq" secondAttribute="bottom" constant="8" id="wQW-12-RCm"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="IIDadata Example" id="knw-5T-EXy"/>
+                    <connections>
+                        <outlet property="apiKeyTextField" destination="CXv-Hu-1Tq" id="3B0-pa-scT"/>
+                        <outlet property="confirmApiKeyButton" destination="Hmr-2v-uLv" id="rce-CB-Rd2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+        </scene>
+        <!--Address Search View Controller-->
+        <scene sceneID="1N7-zd-PUc">
+            <objects>
+                <viewController storyboardIdentifier="AddressSearch" id="Zze-VZ-bhc" customClass="AddressSearchViewController" customModule="IIDadata_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qg4-zA-shX"/>
+                        <viewControllerLayoutGuide type="bottom" id="v6o-nz-Ieq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Uog-AD-prc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pEl-OG-7H6">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="1Aj-BR-ULO"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" placeholder="Delivery address" translatesAutoresizingMaskIntoConstraints="NO" id="WkL-R7-bkO">
+                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RMa-U8-1Sb">
+                                <rect key="frame" x="0.0" y="76" width="375" height="591"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="pEl-OG-7H6" firstAttribute="top" secondItem="qg4-zA-shX" secondAttribute="bottom" id="0Kk-v3-E0J"/>
+                            <constraint firstItem="WkL-R7-bkO" firstAttribute="leading" secondItem="Uog-AD-prc" secondAttribute="leading" id="3yD-xN-fOg"/>
+                            <constraint firstAttribute="trailing" secondItem="WkL-R7-bkO" secondAttribute="trailing" id="IvF-Yl-vYM"/>
+                            <constraint firstAttribute="trailing" secondItem="pEl-OG-7H6" secondAttribute="trailing" id="Lb2-gO-Lvj"/>
+                            <constraint firstAttribute="trailing" secondItem="RMa-U8-1Sb" secondAttribute="trailing" id="OAB-TL-Uzq"/>
+                            <constraint firstItem="pEl-OG-7H6" firstAttribute="leading" secondItem="Uog-AD-prc" secondAttribute="leading" id="UIk-Bo-Ghv"/>
+                            <constraint firstItem="RMa-U8-1Sb" firstAttribute="top" secondItem="WkL-R7-bkO" secondAttribute="bottom" id="d2f-d3-le1"/>
+                            <constraint firstItem="v6o-nz-Ieq" firstAttribute="top" secondItem="RMa-U8-1Sb" secondAttribute="bottom" id="e26-ok-I68"/>
+                            <constraint firstItem="RMa-U8-1Sb" firstAttribute="leading" secondItem="Uog-AD-prc" secondAttribute="leading" id="m9M-Yq-cYe"/>
+                            <constraint firstItem="WkL-R7-bkO" firstAttribute="top" secondItem="pEl-OG-7H6" secondAttribute="bottom" id="zmb-r6-d0X"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="fsp-vI-ZZl"/>
+                    <connections>
+                        <outlet property="grabberView" destination="pEl-OG-7H6" id="cO4-8r-V0Y"/>
+                        <outlet property="searchBar" destination="WkL-R7-bkO" id="PHY-gl-u3E"/>
+                        <outlet property="tableView" destination="RMa-U8-1Sb" id="sos-Xe-u1i"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gDR-Xu-MvC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="daC-za-ch8">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="20"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="RRX-BE-uBO"/>
+                    </constraints>
+                </view>
+            </objects>
+            <point key="canvasLocation" x="2036" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5h2-rU-o80">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wdc-zx-oZN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HWp-pn-MBX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="KQj-FZ-hsq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Z3-NA-JMe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
