Some documentation comments

--- a/Example/IIDadata/Base.lproj/Main.storyboard
+++ b/Example/IIDadata/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Hmr-2v-uLv" secondAttribute="trailing" constant="16" id="IAH-tu-jyo"/>
                             <constraint firstItem="CXv-Hu-1Tq" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="KmZ-bO-aET"/>
